// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LiveshoppingWidget /> should not render the widget without any data 1`] = `""`;

exports[`<LiveshoppingWidget /> should render the widget with a slider for multiple products 1`] = `
<div
  className={
    Object {
      "data-css-9a70pf": "",
    }
  }
  data-test-id="liveShoppingWidget"
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={
      Object {
        "indicator": Object {
          "bullets": "css-1yv2jt6",
        },
      }
    }
    controls={false}
    disabled={false}
    historyPath=""
    indicators={true}
    initialSlide={0}
    interval={3000}
    loop={true}
    maxIndicators={null}
    onSlideChange={null}
    rebuildOnUpdate={false}
    slidesPerView={1}
    snapItems={true}
  >
    <LiveshoppingItem
      key="1234"
      productId="1234"
    />
    <LiveshoppingItem
      key="1235"
      productId="1235"
    />
  </ImageSlider>
</div>
`;

exports[`<LiveshoppingWidget /> should render the widget with no slider for one product 1`] = `
<div
  className={
    Object {
      "data-css-9a70pf": "",
    }
  }
  data-test-id="liveShoppingWidget"
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={
      Object {
        "indicator": Object {
          "bullets": "css-1yv2jt6",
        },
      }
    }
    controls={false}
    disabled={false}
    historyPath=""
    indicators={true}
    initialSlide={0}
    interval={3000}
    loop={true}
    maxIndicators={null}
    onSlideChange={null}
    rebuildOnUpdate={false}
    slidesPerView={1}
    snapItems={true}
  >
    <LiveshoppingItem
      key="1234"
      productId="1234"
    />
  </ImageSlider>
</div>
`;
